--- a/app/src/main/assets/html/no-internet.html
+++ b/app/src/main/assets/html/no-internet.html
@@ -40,7 +40,7 @@
         <div>
             <img
                 src="../image/paste-loko.png"
-                alt="Paste Loko" />
+                alt="Paste Lokko" />
             <br><br>
 
             <p>
