--- a/app/src/main/assets/html/no-internet.html
+++ b/app/src/main/assets/html/no-internet.html
@@ -44,7 +44,7 @@
             <br><br>
 
             <p>
-                Sem conexão com a Internet, tente novamente assim que ela retornar.
+                Sem Conexão com a Internet, tente novamente assim que ela retornar.
             </p>
             <br><br>
 
