--- a/app/src/main/assets/html/no-internet.html
+++ b/app/src/main/assets/html/no-internet.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>
-            Sem conexão com a Internet
+            Sem Conexão com a Internet
         </title>
 
         <style type="text/css">
